# qa-challenges

./: README.md
question1/: main.py  test_generate_pyramid.py
question2/: README.md  pyproject.toml
question2/tests/: setup.py  test_verify_weather.py
question3/: README.md  pyproject.toml  test_verify_szse_api.py
question3/tests/: test_verify_szse_api.py
